# numpy2qimage

./: .gitignore  CMakeLists.txt
cmake/modules/: FindPyQt4.cmake  FindPythonLibrary.cmake  FindSIP.cmake  SIPMacros.cmake
numpy2qimage/: CMakeLists.txt  __init__.py  numpy2qimage.cxx  numpy2qimage.h  numpy2qimage.sip  test.py
